[package]
name = "particula-rs"
description = "A simple particle library"
license = "MIT OR Apache-2.0"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/JMANN240/particula-rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
glam = "0.33.2"
macroquad = "0.4.15"
rand = "0.10.2"

[features]
serde = [
    "dep:serde"
]
